# stacks-node-db-bench

./: .gitmodules  BENCHMARKS-clarity.md  BENCHMARKS-maps.md  BENCHMARKS-serialization.md  BENCHMARKS.md  Cargo.toml  README.md  justfile
benches/: all.rs  benchmark.rs  clarity.rs  general.rs  maps.rs  serialization.rs
capnp/: clarity.capnp  expressions.capnp  functions.capnp  std.capnp  types.capnp
crates/clarity-models/: Cargo.toml  build.rs
crates/clarity-models/capnp/: clarity.capnp  std.capnp  types.capnp
crates/clarity-models/src/: lib.rs
crates/stacks-bench/: Cargo.toml
crates/stacks-bench/benches/: all.rs  clarity.rs  general.rs  maps.rs  serialization.rs
crates/stacks-bench/src/: lib.rs  utils.rs
crates/stacks-bench/src/db_general/: schema.rs
crates/stacks-bench/src/db_next/: mod.rs
crates/stacks-bench/src/db_next/clarity/: mod.rs  schema.rs
crates/stacks-bench/src/tests/: mod.rs  rkyv_tests.rs
data/clarity/: contract_ast.json
protos/: clarity.proto
src/: build.rs  clarity_capnp.rs  expressions_capnp.rs  functions_capnp.rs  lib.rs  std_capnp.rs  types_capnp.rs  utils.rs
src/db_current/chainstate/: mod.rs
src/db_current/chainstate/migrations/2024-02-02-101548_initial/: down.sql  up.sql
src/db_current/clarity/: mod.rs
src/db_current/clarity/data/: contract_analysis.json
src/db_general/: mod.rs  schema.rs
src/db_general/migrations/2024-02-02-102801_initial/: up.sql
src/db_next/clarity/: mod.rs  schema.rs
src/db_next/clarity/migrations/2024-02-03-095451_initial/: up.sql
(+2 files in other folders)
