[workspace]
resolver = "2"

members = [
    "crates/clarity-models",
    "crates/stacks-bench"
]

# Dependencies we want to keep the same between workspace members
[workspace.dependencies]  
ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core"] } 
hashbrown = "0.14.3"
rand_core = "0.6"
rand = "0.8"
rand_chacha = "0.3.1"
tikv-jemallocator = "0.5.4"
wsts = { version = "8.1", default-features = false }